2010-01-17  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        style-queue should include instructions for how to file bugs against check-webkit-style
        https://bugs.webkit.org/show_bug.cgi?id=32345

        Added some text to the error message asking folks to file bugs against
        false positives.

        * Scripts/webkitpy/commands/queues.py:

2010-01-17  Chris Jerdonek  <cjerdonek@webkit.org>

        Reviewed by Adam Barth.

        Eliminated the error_count global variable and related
        check-webkit-style refactoring.

        https://bugs.webkit.org/show_bug.cgi?id=33678

        * Scripts/check-webkit-style:
          - Updated to use webkit_argument_defaults().
          - Renamed styleChecker to style_checker.

        * Scripts/webkitpy/style/checker.py:
          - Prefixed the three default arguments with WEBKIT_DEFAULT.
          - Added webkit_argument_defaults().
          - Added default filter_rules parameter to CategoryFilter constructor.
          - Added __ne__() to CategoryFilter class.
          - Added __eq__() and __ne__() to ProcessorOptions class.
          - Added error_count and _write_error attributes to StyleChecker class.
          - Made StyleChecker._handle_error() increment the error count.

        * Scripts/webkitpy/style/checker_unittest.py:
          - Improved CategoryFilterTest.test_eq().
          - Added CategoryFilterTest.test_ne().
          - Added test_eq() and test_ne() to ProcessorOptionsTest class.
          - Updated unit tests to use webkit_argument_defaults().
          - Added StyleCheckerTest class.

        * Scripts/webkitpy/style/cpp_style.py:
          - Removed references to global error_count.

        * Scripts/webkitpy/style/cpp_style_unittest.py:
          - Removed CppStyleStateTest class.

2010-01-15  Jon Honeycutt  <jhoneycutt@apple.com>

        get_accParent should try to retrieve parent AccessibilityObject, before
        calling upon window
